# cub3d

./: .gitignore  CMakeLists.txt  Makefile  cub3D  cub3d  cub3d.h  error_handler.c  initialize.c  main.c  minilibx.supp  parser.c  parser.h  raycaster.c
docs/: cub3d.md
ft_split/: ft_atoi.c  ft_split.h  ft_split_utils.c
libs/: ft_split.c  lib_utils.c
maps/: basic_map.cub  complex_map.cub  enclosed_space_map.cub  example.cub  invalid_color_format.cub  invalid_no_texture.cub  invalid_open_map.cub  large_open_map.cub  map_generator.sh  maze_map.cub
parser/: debug_utils.c  memory.c  parse_color_utils.c  parse_map_utils.c  parser.c
textures/: east_texture.xpm  north_texture.xpm  south_texture.xpm  west_texture.xpm
validator/: map_validator.c  validator.c  validator.h
